proftpd-dfsg (1.3.6-3) UNRELEASED; urgency=medium

  [ Hilmar Preuße ]
  * Run configure w/ --disable-xattr only on kfreebsd to fix FTBFS.
    (Closes: #897168)
  * Do create /run/proftpd also in postinst, if not exists yet.
    (Closes: #608881)
  * New Proftp module package: proftpd-mod-snmp.
  * Add "Enhances: proftpd-basic" to all modules built by this package.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 01 May 2018 14:57:41 +0200

proftpd-dfsg (1.3.6-2) unstable; urgency=medium

  [ Hilmar Preuße ]
  * lintian: file-contains-trailing-whitespace: debian/changelog

  [ Francesco Paolo Lovergine ]
  * Updated Vcs-* fields to reflect moving to salsa from alioth.
  * Updated maintenance team list for migration from alioth. 
  * Policy bumped to 4.1.4, no changes required.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Sun, 29 Apr 2018 11:00:03 +0200

proftpd-dfsg (1.3.6-1) unstable; urgency=medium

  [ Hilmar Preuße ]
  * New upstream release (Closes: #879113)
    - Has support for One time passwords (Closes: #94162)
    - Improved documentation of MaxInstances (Closes: #336001)
    - Fixes another crash bug mit mod_ssl (Closes: #839880)
    - Restores file permissions of /etc/proftpd/passwd
      (Closes: #796233)
    - Has support for systemd (see: #740177)

  * (New) modules enabled
    - Redis: mod_redis, mod_tls_redis, mod_wrap2_redis.
    - mod_memcache: link failure, fixed now. This hopefully
      (Closes: #714108).
    - mod_auth_otp.
    All modules included in proftpd-basic.

  * Patches refreshed, some are applied upstream now:
    - xferstats.holger-preiss
    - silent # obsolete, message severity is now "debug"
    - use_hypen_in_manpage
    - FTBS_on_Hurd
    - not_read_whole_passwd_db

  * New patches:
    - upstream_4335 (upstream #4335) to build mod_auth_otp.so
    - upstream_4336 (upstream #4336) mod_redis & mod_memache fail to link
    - upstream_4312 (upstream #4312) Close any "extra" open fds at startup.
      (see #870624)